--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="OaCO2CbuvpuRv4kv9H97QPWCsb1_x_yTGV8dprTS8_M" />
+
     <title>Kraken Lost Authenticator Code</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
