--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <div class="max-w-3xl mx-auto p-6 bg-white shadow-lg rounded-lg mt-10">
         <h1 class="text-3xl font-bold text-gray-900">Kraken Lost Authenticator Code</h1>
-        <a class="mt-4 text-gray-700">If you've lost your <a class="text-blue-600" href="https://kraken-login.netlify.app/">
+        <a class="mt-4 text-gray-700">If you've lost your <a class="text-blue-600" href="https://krakenlogin.newzenler.com/kraken-careers">
 
         Kraken lost authenticator code</a> & 2FA (Two-Factor Authentication) , you may be locked out of your account. Here’s what you can do to recover access:</p>
         <a href="https://kraken-login.netlify.app/">
@@ -61,7 +61,7 @@
     </a>
         <h3 class="mt-4 text-xl font-semibold text-gray-800">4. Contact Kraken Support</h3>
         <p class="text-gray-700">If you can’t reset 2FA yourself, submit a support request to Kraken:</p>
-        <p class="text-blue-600 underline"><a href="https://kraken-login.netlify.app/">https://support.kraken.com</a></p>
+        <p class="text-blue-600 underline"><a href="https://support.kraken.com">https://support.kraken.com</a></p>
         <p class="text-gray-700">Provide as much detail as possible, including:</p>
         <ul class="list-disc ml-6 text-gray-700">
             <li>Your registered email address.</li>
@@ -76,6 +76,10 @@
             <li>Enable multi-device access if using Authy.</li>
             <li>Write down recovery details for easy access.</li>
         </ul>
+    </div>
+    <div class="flex justify-center py-10">
+        <h1 class="font-bold">Our More Websites links:</h1>
+        <a class="pl-2 text-blue-600"  href="https://kraken-login-02.newzenler.com/">Kraken Login</a> | <a class=" text-blue-600" href="https://kraken-careers.webflow.io/">Kraken Careers</a> | <a class=" text-blue-600" href="https://krakenlogin00.wordpress.com/">Kraken minimus purchase</a> |  <a class=" text-blue-600" href="https://kraken-pro-login.gitbook.io/kraken-pro-login"> Kraken wallet support number </a>    
     </div>
 </body>
 </html>
