--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="msvalidate.01" content="1248C7C47462391505A4DD1F476516B5" />
     <meta name="google-site-verification" content="D7yzJ7j62oZ9vPR3uYHTafKFcH1WwBiyaliOSzCRYBA" />
     <title>Kraken Lost Authenticator Code</title>
     <script src="https://cdn.tailwindcss.com"></script>
